# boolmore

./: .gitignore  LDOIs_comparison.txt  LICENSE  README.md  compare.py  compare_LDOI.py  data_0811.txt  data_0822.txt  data_1014.txt  data_1025.txt  data_1202.txt  data_20230406.txt  data_20230424.tsv  data_20230425.tsv  data_20230426.tsv  data_ca_ext_20230511.tsv  data_osc.txt  data_osc_1018.txt  data_osc_1025.txt  data_osc_1202.txt  data_osc_20230426.tsv  data_osc_ca_ext_20230511.tsv  data_pair_signal.txt  data_pair_significance.txt  data_test1.txt  data_test2.txt  list_of_models.txt  optimization.txt  plot.py  pyproject.toml
ABA_case_study/: detailed_report.py
Analysis/: 20230215_3995_gen59_mod_score.csv  20230215_3995_gen59_predictions.txt  20230215_3995_gen59_score.csv  20230512_7790_gen125_mod_score.csv  ABA_2018_Waidyarathne_score.csv  ABA_GA_base_B_20230407_score.csv  ABA_full_20230407_score.csv  ABA_full_fix_20230407_score.csv  ABA_full_fix_score.csv  ABA_full_score.csv  no_edge_20230303_3807_gen54_score.csv  osc_20221126_8100_gen79_mod_score.csv  osc_20221126_8100_gen79_score.csv  osc_20230221_7884_gen75_score.csv  osc_20230503_7492_gen66_score.csv  osc_cis_20221127_4424_gen61_mod_score.csv  try_20230522_7854_gen121_score.csv
Benchmarks/: 20221129_benchmarks_timecourse.csv  Arabidopsis thaliana Cell Cycle_data_2.tsv  Arabidopsis thaliana Cell Cycle_data_4.tsv  Arabidopsis thaliana Cell Cycle_data_5.tsv  Arabidopsis thaliana Cell Cycle_final_1.txt  Arabidopsis thaliana Cell Cycle_final_4.txt  Arabidopsis thaliana Cell Cycle_final_5.txt  Arabidopsis thaliana Cell Cycle_start_1.txt  Arabidopsis thaliana Cell Cycle_start_2.txt  Arabidopsis thaliana Cell Cycle_start_5.txt  Aurora Kinase A in Neuroblastoma_data_1.tsv  (+269 more)
(+1693 files in other folders)
