[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "boolmore"
authors = [{ name = "Kyu Hyong Park", email = "kjp5774@psu.edu" }]
version = "0.1.0"
description = "Python package for refining Boolean models"
license = { file = "LISENSE" }
requires-python = ">=3.11"
dependencies = ["pyboolnet @ git+https://github.com/hklarner/pyboolnet",
                "pystablemotifs"]

[project.optional-dependencies]
bench = ["cana"]

[tool.mypy]
mypy_path = ["stubs"]

[tool.setuptools.packages.find]
where = ["baseline_models", "data"]