[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "boolmore"
authors = [{ name = "Kyu Hyong Park", email = "kjp5774@psu.edu" }]
version = "0.1.1"
description = "Python package for refining Boolean models"
license = { file = "LISENSE" }
requires-python = ">=3.11"
dependencies = ["pyboolnet @ git+https://github.com/hklarner/pyboolnet",
                "pystablemotifs"]

[tool.setuptools]
packages = ["boolmore"]